# Face_Recognition_Android

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: MFN_prune.pt
app/src/main/cpp/: Ultra_jni.cpp  net.cpp
app/src/main/java/com/example/face_recognition/: MainActivity.kt
app/src/main/java/com/example/face_recognition/detector/: DetectorActivity.kt  FaceSDKNative.kt
app/src/main/java/com/example/face_recognition/recognizer/: RecognizerActivity.kt
app/src/main/java/com/example/face_recognition/utils/: ImageUtils.kt  YuvToRgbConverter.kt
app/src/main/res/layout/: activity_main.xml  add_image_dialog.xml  bottom_sheet.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
